--- a/index.html
+++ b/index.html
@@ -6,19 +6,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" type="text/css" href="css/sudoku.css" />
-
 </head>
+
+<header>
+    <h1> Sudoku </h1>
+    <div id="game-menu" class="game-menu">
+
+        <div id="difficulty" class="difficulty">
+            <h3>Choose difficulty:</h3>
+            <select onchange="generate_new_board(value)">
+                <option value="beginner">Easy</option>
+                <option value="intermediate">Medium</option>
+                <option value="advanced">Hard</option>
+                <option value="expert"> Expert</option>
+            </select>
+        </div>
+
+        <div id="timer" class="timer">
+            <div id ="wrapper" class = "wrapper">
+                <div id="time" class="time">00:00:00</div>
+                <img src="play.png" onClick="start_timer()" class="img-play" id="play">
+                <img src="pause.png" onClick="pause_timer()" class="img-pause" id="pause">
+            </div>
+        </div>
+
+    </div>
+</header>
 
 <body>
 
     <div>
-        <select onchange="generate_new_board(value)">
-            <option value="beginner">Easy</option>
-            <option value="intermediate">Medium</option>
-            <option value="advanced">Hard</option>
-            <option value="expert"> Expert</option>
-        </select>
-        <table class="sudoku center">
+
+        <table class="sudoku center" id="sudoku">
             <tbody>
                 <tr class="1">
                     <td class="1"><input id="0" type="text" maxlength="1"></td>
@@ -129,15 +148,20 @@
                 </tr>
             </tbody>
         </table>
+
+        <div class="loader">
+            <img src="loading.gif" alt="Loading..." />
+        </div>
     </div>
 
-    <div class="loader">
-        <img src="loading.gif" alt="Loading..." />
-    </div>
 
 
-    <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/jquery-3.5.1.min.js"></script>
+    <script type="text/javascript" src="js/arrow-table.js"></script>
+    <script type="text/javascript" src="js/main.js" defer></script>
+    <script type="text/javascript" src="js/utils.js"></script>
+
+
 
 </body>
 
